--- a/EVA-Model.csproj
+++ b/EVA-Model.csproj
@@ -12,8 +12,17 @@
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         <PrivateAssets>all</PrivateAssets>
       </PackageReference>
-      <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="3.1.6" />
+      <PackageReference Include="Microsoft.Extensions.Configuration" Version="3.1.6" />
+      <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="3.1.6" />
+      <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="3.1.6" />
       <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.6" />
+      <PackageReference Include="MySql.Data.EntityFrameworkCore" Version="8.0.21" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <None Update="appsettings.json">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
 </Project>
