--- a/EVA-Model.csproj
+++ b/EVA-Model.csproj
@@ -16,6 +16,7 @@
       <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="3.1.6" />
       <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="3.1.6" />
       <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.6" />
+      <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="3.1.6" />
       <PackageReference Include="MySql.Data.EntityFrameworkCore" Version="8.0.21" />
     </ItemGroup>
 
